@@ -36,5 +36,4 @@ build-aux/sanity.mk
 build-aux/specl.mk
 build-aux/update-copyright
 m4/
-specs/specl
 travis.yml.in
