@@ -1,7 +1,3 @@
-before:
-  require "specl.shell"
-  require "spec_helper"
-
 describe custom formatters:
 - before: |
     -- Spec-file to feed to the formatter.
