@@ -1,7 +1,3 @@
-before:
-  require "spec_helper"
-
-
 describe report:
 - before:
     preamble = "describe report:\n- it is pending:"
