@@ -1,6 +1,4 @@
 before: |
-  require "spec_helper"
-
   hell = require "specl.shell"
   Command, spawn = hell.Command, hell.spawn
 
