@@ -21,9 +21,10 @@
 ## Specs. ##
 ## ------ ##
 
-# Override Slingshot SPECL.
-SPECL = specs/specl
+SPECL= $(srcdir)/bin/specl
 SPECL_OPTS = --unicode
+
+SPECL_ENV = SPECL=$(SPECL) LUA_PATH="$(srcdir)/lib/?.lua;$(LUA_PATH)"
 
 specl_SPECS =						\
 	$(srcdir)/specs/environment_spec.yaml		\
@@ -41,18 +42,5 @@ EXTRA_DIST +=						\
 	$(NOTHING_ELSE)
 
 specl-check-local: $(SPECL)
-
-$(SPECL):
-	$(AM_V_at)test -d specs || mkdir -p specs
-	$(AM_V_GEN){ printf '%s\n'					\
-	  '#!/bin/sh'							\
-	  '# DO NOT EDIT - This file is generated by specs/specs.mk'	\
-	  ': $${LUA_PATH=";"}'						\
-	  'LUA_PATH="$(srcdir)/lib/?.lua;$$LUA_PATH" $(srcdir)/bin/specl "$$@"'	\
-	  'exit $$?';							\
-	} > $@
-	$(AM_V_at)chmod 555 '$@'
-
-DISTCLEANFILES += $(SPECL)
 
 include build-aux/specl.mk
